criação do navbar com lista de botões

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header class="cabecalho">
+        <nav class="cabecalho_nav">
+            <a href="#">
+                <img class="cabecalho__nav-logo" src="logo" alt="logo">
+            </a>
+            <span class="cabecalho_nav_linha"></span>
+            <ul class="cabecalho_nav-lista">
+                <li class="cabecalho_lista-item"><a href="#">Inicio</a></li>
+                <li class="cabecalho_lista-item"><a href="#">CPU</a>
+                <li class="cabecalho_lista-item"><a href="#">Monitores</a></li>
+                <li class="cabecalho_lista-item"><a href="#">Raspberry</a></li>
+                <li class="cabecalho_lista-item"><a href="#">Impressoras</a></li>
+                <li class="cabecalho_lista-item"><a href="#">Notebooks</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
