--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             </ul>
         </nav>
     </header>
+
+    <div class="container_list">
+        
+    </div>
     
 </body>
 </html>
